	  refactoring attemtps. A consequence of this is that content negotiation is now
	  honored where it was not previously. For Firefox in particular, a request with 
	  no explicit format (via file extension or 'form' parameter) will resolve to "html"
	  thus causing a redirection to the ORR portal. Previously this would resolve in 
	  the "owl" response. 


2010-06-15   1.9.2.alpha   (note: syncing version with iserver and orr modules)
	Issue #252: "omv:version gone?".
	- In general, the solution is to obtain a synthetic omv.version value taken from omv.creationDate value.
	- Methods created as part of the fix:
		- JenaUtil2.getVersionFromCreationDate(OntModel model)
		- JenaUtil2.setVersionFromCreationDateIfNecessary(OntModel ontModel)
	  Called by:
	  	- UnversionedConverter: to take care of adding omv.version to the unversioned response
	  	- UriResolver2: for cases where UnversionedConverter is not used.
	  	
	- Note that the solution above is to take care of already registered ontologies that are missing
	  the omv.version property. The iserver module also has a corresponding fix so new submissions 
	  now will have this property assigned.
	  
	  
	
2010-06-14   1.7.0.beta3
	Issue #242: "admin interface to remove an ontology" implemented:
	- OntConfig: new BIOPORTAL_REST_URL property similar to the one in ontmd2 module, ie.,
	  URL of the "aquaportal" REST endpoint. Keeping the prefix "bioportal" because that's the
	  one used in ontmd2 (so it's easier to track-- TODO: general clean-up).
	  
	- New OntologyDeleter for the basic removal from the bioportal back-end
	
	- OntServlet._unregisterOntology: calls the above and also updates the graphs resource
	  and the triple store.
	
	- Moved getRegisteredOntologyLatestVersion(String potentialOntUri) from OntServlet to Db.
	
	- New org.mmisw.ont.vocabulary.Rdfg for definitions in http://www.w3.org/2004/03/trix/rdfg-1/
	
	Update of new graphs: